<?xml version="1.0"?>
<package>
	<name>boost_test</name>
	<version>1.0.0</version>
	<description>The boost_test package</description>

	<maintainer email="wwwjyc@gmail.com">pi</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>

	<run_depend>roscpp</run_depend>
</package>
