<?xml version="1.0"?>
<package>
	<name>position</name>
	<version>0.0.0</version>
	<description>The position package</description>

	<maintainer email="wwwjyc@gmail.com">pi</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cv_bridge</build_depend>
	<build_depend>opencv</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<run_depend>cv_bridge</run_depend>
	<run_depend>opencv</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
</package>
